--- a/essay2.tex
+++ b/essay2.tex
@@ -13,61 +13,52 @@
 \textbf{Dr. Anita Borg was a visionary and leader among women in technology. Please give us 2-3 examples of how you have exhibited leadership. Explain how you were influential and what you were trying to achieve. These need not be demonstrated through formal or traditional leadership roles. Think broadly and examine the many ways you are having an effect on the members of your technical community, your university, or your broader community.}\\
 
 % links:  mentoring women, keeping things organized
-I've been involved with several leadership activities during my time at UC Berkeley.
-In each activity, I've sought to apply my organizational skills to mentor and encourage graduate and undergraduate students in the department, especially women.
+During my time at UC Berkeley, I have been involved with several leadership activities.
+In each, I have applied my organizational skills to mentor and encourage graduate and undergraduate students in the department, especially women.
 
 % twice as long as it should be!  Want 150-200 words per activity plus some intro & conclusion
-My primary leadership activity is mentoring undergraduate researchers.
-Through this experience, my goals included providing research opportunities for undergraduates, developing my managerial skills, and gaining help with my own research.
-I was motivated to do this in part by my own experience doing research as an undergraduate.
-My graduate mentor made a big impact on me through teaching me about new concepts, encouraging me to grow professionally, and believing that I would succeed.
-Since I know that a research opportunity can be really valuable, not only for what you learn during the experience but also for the doors it can open afterwards, I was motivated to give this opportunity to others as well.
-I am currently supervising two undergraduate women, Durga and Lauren.
-Durga has been working with me for a year and a half, and Lauren started a couple months ago.
-They are working with me on the genomics project.
-Since they didn't learn all the necessary skills/tools in their classes, I have taught them about version control (github), dependency management (maven/sbt), data analysis (R), languages (Scala), and web programming (JavaScript, jQuery, HTML, REST).
-I also worked with Durga on professional growth and developing good habits.
-Since she was working on submitting a four-page extended abstract to a crowdsourcing conference (CSCW 2012), I taught her the value of getting feedback on her writing, making sure the story is coming across to people unfamiliar with the work, and identifying and emphasizing the most important contributions of the work.
+For the past year and a half, I have been mentoring an undergraduate research assistant named Durga.
+%Through this experience, my goals included providing research opportunities for undergraduates, developing my managerial skills, and gaining help with my own research.
+I was motivated by my own experience doing undergraduate research.
+I really admired my graduate mentor and the way she taught me about new concepts, encouraged me to grow professionally, and believed that I would succeed; therefore, I sought to emulate her.
+%Since I know that a research opportunity can be really valuable, not only for what you learn during the experience but also for the doors it can open afterwards, I was motivated to give this opportunity to others as well.
+For my research, I use a variety of tools that Durga had not encountered, so I taught her about version control (github), dependency management (maven/sbt), data analysis (R), languages (Scala), and web programming (JavaScript, jQuery, HTML, REST).
+In the context of a crowdsourcing project, I worked with her to develop better habits.
+We decided to submit an extended abstract and poster to CSCW 2012, and along the way, I talked with her about the value of getting feedback on her writing, making sure the story is coming across to people unfamiliar with the work, and identifying and emphasizing the most important contributions of the work.
 Her submission was accepted, and she will present the work at CSCW this year.
-She also presented a poster at CrowdConf.
-This was a good opportunity for her to produce a research deliverable and get experience explaining her work and networking.
-She learned a lot and felt pride in her achievement.
-I've gotten a lot out of this experience as well.
-I've been able to work on my teaching and mentoring abilities.
-I've been able to grow as a manager, including having meetings each semester to talk about progress during the past semester and set goals for the next semester as well as learning when to let the students figure things out on their own vs. when to step in and help.
-Also, my advisor now thinks of me as a go-to person for mentoring undergraduates; hence, he came to me when Lauren approached him for a research opportunity.
-Probably the most rewarding part of this experience was when Durga told me that because of her experience working with me, she believes that she can be successful in graduate school.
+It was most rewarding when Durga shared that she believes that she can succeed in graduate school because of this experience.
+Mentoring has benefitted me as well; I have grown as a manager, and I have been able to do more research than I would have on my own.
+%Employing techniques like having regular goal-setting and progress update meetings as well as learning when to let the students figure things out on their own vs. when to step in and help has allowed me to grow as a manager.
+Also, when another undergraduate student, Lauren, recently asked my advisor for a research opportunity, he sent her to me.
 
-Another significant leadership activity I have had was when I served as a teaching assistant (TA) to one of my advisors, Armando Fox, for a software engineering course in which the students learned about building software-as-a-service (SaaS) web applications using Ruby on Rails.
-Along with the other graduate student serving as a TA, and with input from our advisor, I organized the undergraduate TAs, designed and held discussion section and review sessions, supervised project teams, and designed and graded assignments and exams.
-Rather than waiting for my advisor to suggest topics for the weekly discussion section, I designed the section to go over topics that the students were struggling with, which I kept track of when the students came to ask for help in my office hours or on the online forum.
+I got another leadership opportunity when I served as a teaching assistant (TA) to one of my advisors, Armando Fox, for a software engineering course focused on building Ruby on Rails web applications.
+Along with the other graduate TA, and with input from our advisor, I managed the undergraduate TAs, held discussion section and review sessions, supervised project teams, and designed and graded assignments and exams.
+%Rather than waiting for my advisor to suggest topics for the weekly discussion section, I designed the section to go over topics that the students were struggling with, which I kept track of when the students came to ask for help in my office hours or on the online forum.
 The course focused on completing a group project.
-I supervised half of the project teams, giving them feedback on their progress, helped them plan new features to add to their projects, and pointed out when a change of course was necessary (\eg schema redesign to better align with design principles).
-I also helped them work out interpersonal conflicts such as imbalanced workload, where one team member would do all the work and the others would not participate fully.
-I was seeking to help my advisor keep the class organized so that the students would learn things that would help them in the rest of their studies and also in their future careers, including both technical skills and how to deal with their teammates and future collaborators.
+I supervised half of the project teams, which involved giving them feedback on their progress, helping them plan new features, and pointing out when a change of course was necessary (\eg schema redesign to better align with design principles).
+I also helped them work out interpersonal conflicts arising from unequal participation.
+I sought to help my advisor run an organized class so that the students would learn both technical skills and how to deal with their teammates and future collaborators.
 It was great to see one of the students I supervised get hired at PivotalLabs, putting into practice what she had learned in our class.
 I also got good feedback on my evaluations; many students said that I was helpful and approachable, and one said ``she rocks!"
 % could mention that I went out of my way to mentor/encourage the female students (office hours, hallway conversations, following up with students who weren't doing well, giving advice about what to do afterwards)
 
-Another way I've been involved in leadership is through my involvement with UC Berkeley's group for female EECS graduate students, Women in Computer Science and Engineering (WICSE).
-The primary activity that WICSE organizes is a weekly lunch for female graduate students in EECS.
-These lunches mean a lot to me because it is so encouraging to interact with other women in the department.
-I decided to serve as an officer in WICSE because of how much I appreciate being involved with the organization.
-I chose to volunteer to be lunch coordinator, and I held this position for two years.
-Before I served in this office, the lunch was somewhat disorganized.
-For example, when you volunteered to order lunch one week, you didn't really know what you were supposed to bring (\eg how much food to buy, whether to also bring plates, cups, and flatware), how to get reimbursed, or even have a way to keep track of when you had volunteered since there was only a paper sign-up.
-Sometimes, it wasn't even clear where the lunch would take place, since room reservations could be changed or canceled by the department staff and this wouldn't always get communicated to the group.
-Once I became lunch coordinator, I made an effort to streamline these processes.
-I centralized the supply management (plates, cups, etc.) since buying in bulk allowed us to save money and made things easier for the volunteers.
-I also managed room reservations and recruited volunteers via electronic signup with a Google spreadsheet.
-I sent reminders with a FAQ section to each week's scheduled volunteer and also sent an email on the day of the lunch to the attendees with the location and special event (if any).
-I also managed the special event schedule since we occasionally had a guest speaker from the department or industry.
-Basically, my goal was to take care of all the details so that things would run more smoothly and people could enjoy the lunch more.
-I feel that I was influential because when I passed the baton to my successor, she continued implementing things according to the pattern I had established.
-I was also involved with mentoring younger graduate students and undergraduates.
-Each year when we get new graduate students, we have a Big Sisters/Little Sisters program, and I enjoy participating.
-I meet up with a female first-year graduate student and help her get oriented to life in Berkeley as well as the department, including figuring out things like finding an advisor, selecting classes, and even where to buy groceries or find a hair salon.
-Another activity I participate in is the monthly mentoring lunch, where we interact with undergraduates and help them figure out what classes to take as well as how to get involved with research if they're interested in graduate school.
+My involvement with UC Berkeley's group for female EECS graduate students, Women in Computer Science and Engineering (WICSE), has been another great leadership activity.
+The primary activity that WICSE organizes is a weekly lunch.
+WICSE and especially these lunches mean a lot to me because it is so encouraging to interact with other women in the department.
+%I therefore decided to serve as an officer in WICSE because of how much I appreciate being involved with the organization.
+I therefore volunteered to be lunch coordinator, and I held this position for two years.
+Before I served in this office, the lunch was fairly disorganized.
+For example, people ordering lunch were often confused about what to bring and how to get reimbursed, and the location would often be changed at the last minute.
+%For example, when you volunteered to order lunch one week, you didn't really know what you were supposed to bring (\eg how much food to buy, whether to also bring plates, cups, and flatware), how to get reimbursed, or even have a way to keep track of when you had volunteered since there was only a paper sign-up.
+%Sometimes, it wasn't even clear where the lunch would take place, since room reservations could be changed or canceled by the department staff and this wouldn't always get communicated to the group.
+As lunch coordinator, my goal was to take care of the details so that everyone could better enjoy themselves.
+I centralized the supply management (plates, cups, etc.), arranged room reservations, and recruited volunteers.
+%I sent reminders with a FAQ section to each week's scheduled volunteer and also sent an email on the day of the lunch to the attendees with the location and special event (if any).
+I also managed the special event schedule since we often had guest speakers from the department or from industry.
+My successor continued implementing things according to the pattern I had established.
+WICSE also provides opportunities to mentor younger graduate students and undergraduates.
+As part of our Big Sisters/Little Sisters program, I meet up with female first-year graduate students and help them get oriented to life in Berkeley.
+I also participate in is the monthly mentoring lunch, which involves helping undergraduates figure out what classes to take as well as how to get involved with research if they're interested in graduate school.
 
 My leadership activities have been an important element of my time at UC Berkeley.
 I feel that I have been able to apply my skills to help others while learning a lot myself.
