--- a/essay3.tex
+++ b/essay3.tex
@@ -12,50 +12,52 @@
 
 \textbf{Anita Borg proposed the ``50/50 by 2020" initiative, so that women earning computing degrees would be 50\% of the graduates by year 2020. However, the percentage of computer science degrees earned by women is still far from 50\% throughout the world.  What might you propose that could be implemented by a school, the government, an organization, or a private company to reverse the trend? Short of getting to 50/50 by 2020, how would you measure the success of your program?}\\
 
-One big problem with getting equal representation of women in computer science is that a lot of women drop out of CS degree programs.  % need a citation
-I would address the diversity problem by proposing a program aimed at increased retention of women in CS bachelor's degree programs that could be implemented by universities.
-Retention is a good target because as Sheryl Sandberg said, you can instantly double your women in CS by keeping half of them from dropping out.  % need citation; not sure if it'd be offensive to use quote from her
-
-The program I'm proposing would be called the Buddy \textit{Sis}tem.
-It would be implemented at the university level.
+%One big problem with getting equal representation of women in computer science is that a lot of women drop out of CS degree programs.  % need a citation
+I would address the diversity problem by proposing a program aimed at increased retention of women in CS bachelor's degree programs.
+%Retention is a good target because as Sheryl Sandberg said, you can instantly double your women in CS by keeping half of them from dropping out.  % need citation; not sure if it'd be offensive to use quote from her
+The program would be called the Buddy \textit{Sis}tem and would be implemented at the university level.
 The idea would be to enroll freshmen women in the program.
 To participate, the women would have to agree to have a buddy with whom they would take all their classes for at least the first year.
-This sounds onerous, so the universities should provide perks to incentivize being in the program such as preferential enrollment in courses of interest.
-Many freshmen have a hard time getting into the classes they want since enrollment is usually based on seniority, so this would be pretty powerful.
-
-Yes, it sounds draconian to force the girls to take all their classes together for a whole year, but I believe that doing so has powerful advantages that outweigh the hassles.
+%This sounds onerous, so the universities should provide perks to incentivize being in the program such as preferential enrollment in courses of interest.
+%Many freshmen have a hard time getting into the classes they want since enrollment is usually based on seniority, so this would be pretty powerful.
+It may sound draconian to force the girls to take all their classes together for a whole year, but I believe that doing so has powerful advantages that outweigh the hassles.
 This is based on my own experiences at UC Berkeley.
-It takes much more than just having female friends to really make you stick with CS.
-The problem with just having female friends is that there are so few females that you're unlikely to run into them very often or have classes with them very much if you don't make an effort to do so.
-People get so busy with their studies, especially the first year when it's such a big adjustment and you can feel so overwhelmed, that it's unlikely that you'll have time to keep up with them regularly.
-It takes regular contact to build the trust required to share the feelings of inadequacy or being an imposter that women are so often plagued by (see how popular the imposter syndrome speaker series is).
+% First point:  need to enforce regular contact so they can build trust
 
-The other big advantage I see in having women take all their classes together is that they can have shared experiences.
-It's so powerful to be able to talk to someone who understands exactly what you're going through because they have the same professor who can make such discouraging comments (\eg ``I'm sure you all learned this in middle school" or ``It's silly to be interested in fashion") or because they're banging their head against the same impossible assignment.
-These are the things that make people (especially women) drop out of a CS program.
-Talking to someone who's in another class with a completely different style of instruction just isn't as encouraging because they can't relate as well.
+The first advantage of the Buddy \textit{Sis}tem is that it provides the structure necessary for building trust.
+While an informal cadre of female friends can be immensely beneficial, the danger is that since most CS departments have so few female students, they are unlikely to spend much time together without a conscious effort, especially since the first year of college can be so overwhelming.
+As evidenced by the popularity of ``The Impostor Syndrome" seminars, many women feel inadequate, particularly women in male-dominated environments.
+Buddies would engage in regular contact so they would feel more comfortable sharing their feelings with each other.
 
-I would also recommend planning fun social events as well, including alumni of the program who can pass on that view from the future (\eg ``It gets better").
-This helps to produce a bond between the girls and also exposes them to encouragement from people with more experience and hopefully more confidence.
+% Second point:  regular contact => shared experiences => you can empathize with each other
+Another significant advantage of taking all classes together is that buddies would have shared experiences.
+There is immense power in talking to someone who understands exactly what you are facing because she has the same professor who makes insensitive comments (\eg ``I'm sure you all learned this in middle school" or ``It's silly to be interested in fashion") or because she is banging her head against the same impossible assignment.
+Talking to someone in another class with a completely different style of instruction is less encouraging because they cannot fully empathize.
 
-I believe that these girls should get paired up so that they're as similar as possible, both with respect to technical experience (\eg years coding, math background) and also with respect to interest level (\eg hobbies, extracurricular activities).
-This addresses what I believe is the most fundamental confidence issue that women in CS face, which is asking yourself whether people like you can succeed in CS.
-It can be so hard when you look around and don't see any role models that you can relate to.
-However, it's been my experience that having someone you have a lot in common with that you respect gives you confidence that you can also succeed.
-I've been fortunate enough to have a friend in my lab who I interact with on a daily basis, who I have a lot in common with, and who has some of the same struggles that I do.
-Our interactions are so helpful for me when I'm having a bad day, and I've been able to encourage her when she hits a wall as well.
-However, I don't think that it's universal to have this type of relationship, so I think we should do what we can to help it along.
+%I would also recommend planning fun social events as well, including alumni of the program who can pass on that view from the future (\eg ``It gets better").
+%This helps to produce a bond between the girls and also exposes them to encouragement from people with more experience and hopefully more confidence.
 
-To measure the success of my program, I would compare girls that were in the program vs. girls that weren't via qualitative and quantitative metrics at the end of each school year.
-For qualitative evaluation, I would issue surveys to gauge how happy the girls are and the state of their mental health (\eg do they have less depression or anxiety?), how confident they feel in their abilities to succeed in CS and their degree program in particular, and whether they feel that they're at a disadvantage in the field because of their gender.
-Ideally, I'd like to see that the girls in the program score higher on these scales than girls going at the degree program on their own.
-I would also like to see if girls opt to continue taking classes with their buddy after the first year when it's mandatory.
-As far as a quantitative evaluation, I would compare the GPAs of the girls in the program and not in the program.
-I'd also like to see if these girls translate their increased confidence into better academic performance -- my hypothesis is that they would.
-Finally, since this program is addressed at improving retention rates, I'd want to see that girls in the program were more likely to stay enrolled in the degree program than otherwise.
+When implementing the program, girls should be paired up according to their technical experience (\eg years coding, math background) and extracurricular interests.
+Personally, merely seeing other women in CS is not enough to make me believe I can succeed if they are very different from me (\eg more experienced at coding, more into the nerd subculture, less interested in things outside of CS).
+%This addresses what I believe is the most fundamental confidence issue that women in CS face, which is asking yourself whether people like you can succeed in CS.
+%It can be so hard when you look around and don't see any role models that you can relate to.
+%However, it's been my experience that having someone you have a lot in common with that you respect gives you confidence that you can also succeed.
+However, I have been fortunate to have a friend in my lab with whom I interact on a daily basis, and we not only share non-CS interests but also struggle in some of the same ways.
+Our interactions are a powerful source of mutual encouragement.
+Rather than leaving it to chance, the Buddy \textit{Sis}tem could help women develop this sot of relationship.
 
-Being a woman in CS is hard work, both technically and emotionally.
-I believe that I've been very fortunate to have a friend who is like-minded and understands my struggles, and I believe universities would do a lot to achieve their goals of diversity and retention by helping girls find buddies.
+To measure the success of my program, I would compare girls outside the program (control group) with buddies (treatment group) via qualitative and quantitative metrics.
+I would issue surveys to assess their mental health (\eg do they have less depression or anxiety?) as well as their confidence in their abilities to succeed in the degree program.
+%Ideally, I'd like to see that the girls in the program score higher on these scales than girls going at the degree program on their own.
+%If girls opted to continue taking classes with their buddies after the first year, that would also be indicative of a successful program.
+I would also look at their academic performance (\ie GPA).
+%The program would be a success if participants scored higher on the surveys and with respect to GPA.
+%I'd also like to see if these girls translate their increased confidence into better academic performance -- my hypothesis is that they would.
+Most importantly, since this program is addressed at improving retention rates, I would compare the rates of attrition in the control and treatment groups.
+The program would be a success if the girls in the program would be more likely to stay enrolled in the degree program than otherwise.
+
+Studying CS is hard work, and being a woman can bring additional challenges.
+I have been very fortunate to have a friend who is like-minded and understands my struggles, and I believe universities could increase diversity and improve retention by helping girls find buddies like mine.
 
 
 \end{document}
