revision of essay 3 (incorporated BT's feedback), but 100 words over length

--- a/essay3.tex
+++ b/essay3.tex
@@ -13,20 +13,26 @@
 \textbf{Anita Borg proposed the ``50/50 by 2020" initiative, so that women earning computing degrees would be 50\% of the graduates by year 2020. However, the percentage of computer science degrees earned by women is still far from 50\% throughout the world.  What might you propose that could be implemented by a school, the government, an organization, or a private company to reverse the trend? Short of getting to 50/50 by 2020, how would you measure the success of your program?}\\
 
 %One big problem with getting equal representation of women in computer science is that a lot of women drop out of CS degree programs.  % need a citation
-I would address the diversity problem by proposing a program aimed at increased retention of women in CS bachelor's degree programs.
+%There are many obstacles to achieving equal representation of women in computer science.
+%Not only is it difficult to attract enough women to study CS, but those women are also more likely to drop out of CS degree programs than their male colleagues.
+I would promote diversity with a program to increase retention of women in CS bachelor's degree programs.
+%I have chosen to target retention rather than attraction because rather than having to identify more women who are interested in CS, we already have a self-identified group of women who are interested in CS that we just have to support so they can finish their degrees.
 %Retention is a good target because as Sheryl Sandberg said, you can instantly double your women in CS by keeping half of them from dropping out.  % need citation; not sure if it'd be offensive to use quote from her
-The program would be called the Buddy \textit{Sis}tem and would be implemented at the university level.
-The idea would be to enroll freshmen women in the program.
-To participate, the women would have to agree to have a buddy with whom they would take all their classes for at least the first year.
+Women who have embarked on a degree program have already taken the important step of declaring an interest in CS (itself the subject of many diversity programs), so if we want more female CS graduates, they are a great target for our efforts.
+
+My program, called the Buddy \textit{Sis}tem, would be implemented at the university level.
+%The idea would be to enroll freshmen women in the program.
+Freshmen women would be eligible to participate, but in doing so, they would have to agree to have a buddy with whom they would take all their classes for at least the first year.
+This would be a single person rather than one per class, and it would apply to all classes, not just those focused on programming.
 %This sounds onerous, so the universities should provide perks to incentivize being in the program such as preferential enrollment in courses of interest.
 %Many freshmen have a hard time getting into the classes they want since enrollment is usually based on seniority, so this would be pretty powerful.
-It may sound draconian to force the girls to take all their classes together for a whole year, but I believe that doing so has powerful advantages that outweigh the hassles.
-This is based on my own experiences at UC Berkeley.
-% First point:  need to enforce regular contact so they can build trust
+This may sound draconian, but based on my experiences at UC Berkeley, I believe that it has powerful advantages that outweigh the hassles.
 
+% First point:  need to enforce regular contact so they can build trust
 The first advantage of the Buddy \textit{Sis}tem is that it provides the structure necessary for building trust.
 While an informal cadre of female friends can be immensely beneficial, the danger is that since most CS departments have so few female students, they are unlikely to spend much time together without a conscious effort, especially since the first year of college can be so overwhelming.
-As evidenced by the popularity of ``The Impostor Syndrome" seminars, many women feel inadequate, particularly women in male-dominated environments.
+Infrequent contact and the weak ties that result do little to provide an opportunity for confiding one's struggles.
+This is problematic because, as evidenced by the popularity of ``The Impostor Syndrome" seminars, many women feel inadequate, particularly in male-dominated environments.
 Buddies would engage in regular contact so they would feel more comfortable sharing their feelings with each other.
 
 % Second point:  regular contact => shared experiences => you can empathize with each other
