--- a/essay3.tex
+++ b/essay3.tex
@@ -41,29 +41,35 @@ There is immense power in talking to someone who understands exactly what you ar
 Talking to someone in another class with a completely different style of instruction is less encouraging because they cannot fully empathize.
 
 %I would also recommend planning fun social events as well, including alumni of the program who can pass on that view from the future (\eg ``It gets better").
-%This helps to produce a bond between the girls and also exposes them to encouragement from people with more experience and hopefully more confidence.
+%This helps to produce a bond between the women and also exposes them to encouragement from people with more experience and hopefully more confidence.
 
-When implementing the program, girls should be paired up according to their technical experience (\eg years coding, math background) and extracurricular interests.
-Personally, merely seeing other women in CS is not enough to make me believe I can succeed if they are very different from me (\eg more experienced at coding, more into the nerd subculture, less interested in things outside of CS).
+% objections:
+% why not a cohort -- people can fall through the cracks
+% why not just a big sister -- can't relate b/c they've already moved on to bigger worries; seem less approachable.  also they're not getting as much out of it, so less inclined to give you a lot of time.
+
+When implementing the program, women should be paired up according to their technical experience (\eg years coding, math background) and extracurricular interests.
+%Personally, merely seeing other women in CS is not enough to make me believe I can succeed if they are very different from me (\eg more experienced at coding, more into the nerd subculture, less interested in things outside of CS).
+I believe that a woman will be most encouraged regarding her potential for success in CS if she sees someone like her doing well.
+This may be even more important in the case of women who have less coding experience or interests that are out of step with the nerd subculture that is usually associated with CS; these women may therefore be in greater danger of feeling out of place.
 %This addresses what I believe is the most fundamental confidence issue that women in CS face, which is asking yourself whether people like you can succeed in CS.
 %It can be so hard when you look around and don't see any role models that you can relate to.
 %However, it's been my experience that having someone you have a lot in common with that you respect gives you confidence that you can also succeed.
-However, I have been fortunate to have a friend in my lab with whom I interact on a daily basis, and we not only share non-CS interests but also struggle in some of the same ways.
+I have been fortunate to have a friend in my lab with whom I interact on a daily basis, and we not only share non-CS interests (\eg fine dining) but also struggle in some of the same ways.
 Our interactions are a powerful source of mutual encouragement.
-Rather than leaving it to chance, the Buddy \textit{Sis}tem could help women develop this sot of relationship.
+Rather than leaving it to chance, the Buddy \textit{Sis}tem would help women develop this sot of relationship.
 
-To measure the success of my program, I would compare girls outside the program (control group) with buddies (treatment group) via qualitative and quantitative metrics.
+To measure the success of my program, I would compare women outside the program (control group) with buddies (treatment group) via qualitative and quantitative metrics.
 I would issue surveys to assess their mental health (\eg do they have less depression or anxiety?) as well as their confidence in their abilities to succeed in the degree program.
-%Ideally, I'd like to see that the girls in the program score higher on these scales than girls going at the degree program on their own.
-%If girls opted to continue taking classes with their buddies after the first year, that would also be indicative of a successful program.
+%Ideally, I'd like to see that the women in the program score higher on these scales than women going at the degree program on their own.
+%If women opted to continue taking classes with their buddies after the first year, that would also be indicative of a successful program.
 I would also look at their academic performance (\ie GPA).
 %The program would be a success if participants scored higher on the surveys and with respect to GPA.
-%I'd also like to see if these girls translate their increased confidence into better academic performance -- my hypothesis is that they would.
+%I'd also like to see if these women translate their increased confidence into better academic performance -- my hypothesis is that they would.
 Most importantly, since this program is addressed at improving retention rates, I would compare the rates of attrition in the control and treatment groups.
-The program would be a success if the girls in the program would be more likely to stay enrolled in the degree program than otherwise.
+The program would be a success if the women in the program would be more likely to stay enrolled in the degree program than otherwise.
 
-Studying CS is hard work, and being a woman can bring additional challenges.
-I have been very fortunate to have a friend who is like-minded and understands my struggles, and I believe universities could increase diversity and improve retention by helping girls find buddies like mine.
+Completing a CS degree program can be difficult for anyone, and being a woman can bring additional challenges.
+I have been very fortunate to have a friend who is like-minded and understands my struggles, and I believe universities could increase diversity and improve retention by helping women find buddies like mine.
 
 
 \end{document}
