remove comments; revise essay 3 per bt's comments

--- a/essay3.tex
+++ b/essay3.tex
@@ -12,64 +12,38 @@
 
 \textbf{Anita Borg proposed the ``50/50 by 2020" initiative, so that women earning computing degrees would be 50\% of the graduates by year 2020. However, the percentage of computer science degrees earned by women is still far from 50\% throughout the world.  What might you propose that could be implemented by a school, the government, an organization, or a private company to reverse the trend? Short of getting to 50/50 by 2020, how would you measure the success of your program?}\\
 
-%One big problem with getting equal representation of women in computer science is that a lot of women drop out of CS degree programs.  % need a citation
-%There are many obstacles to achieving equal representation of women in computer science.
-%Not only is it difficult to attract enough women to study CS, but those women are also more likely to drop out of CS degree programs than their male colleagues.
-I would promote diversity with a program to increase retention of women in CS bachelor's degree programs.
-%I have chosen to target retention rather than attraction because rather than having to identify more women who are interested in CS, we already have a self-identified group of women who are interested in CS that we just have to support so they can finish their degrees.
-%Retention is a good target because as Sheryl Sandberg said, you can instantly double your women in CS by keeping half of them from dropping out.  % need citation; not sure if it'd be offensive to use quote from her
-Women who have embarked on a degree program have already taken the important step of declaring an interest in CS (itself the subject of many diversity programs), so if we want more female CS graduates, they are a great target for our efforts.  % low-hanging fruit argument
+To address Anita Borg's initiative, I propose a program to increase retention of women in CS bachelor's degree programs.
+Women who have embarked on a degree program have already taken the important step of declaring an interest in CS, so if we want more female CS graduates, they are a great target for our efforts.  % low-hanging fruit argument
 
-My program, called the Buddy \textit{Sis}tem, would be implemented at the university level.
-%The idea would be to enroll freshmen women in the program.
-Freshmen women would be eligible to participate, but in doing so, they would have to agree to have a buddy with whom they would take all their classes for at least the first year.
-This would be a single person rather than one per class, and it would apply to all classes, not just those focused on programming.
-%This sounds onerous, so the universities should provide perks to incentivize being in the program such as preferential enrollment in courses of interest.
-%Many freshmen have a hard time getting into the classes they want since enrollment is usually based on seniority, so this would be pretty powerful.
-This may sound draconian, but based on my experiences at UC Berkeley, I believe that it has powerful advantages that outweigh the hassles.
+My program, called the Buddy \textit{Sis}tem, would be implemented at the university level and would be open to new female CS majors.
+Participants would agree to have a buddy with whom they would take all their classes (not just those focused on programming) for at least the first year.
+This may sound draconian, but based on my experiences at UC Berkeley, I believe its powerful advantages outweigh the hassles.
 
 % First point:  need to enforce regular contact so they can build trust
 First, the Buddy \textit{Sis}tem provides the structure necessary for building trust.
 While an informal cadre of female friends can be immensely beneficial, the danger is that since most CS departments have few female students, they are unlikely to spend much time together without a conscious effort, especially since the first year of college can be so overwhelming.
-Infrequent contact and the weak ties that result do little to provide an opportunity for confiding one's struggles.
+The weak ties that often result do little to provide an opportunity for confiding one's struggles.
 This is problematic because, as evidenced by the popularity of ``The Impostor Syndrome" seminars, many women feel inadequate, particularly in male-dominated environments.
 Buddies would engage in regular contact so they would feel more comfortable sharing their feelings with each other.
 
 % Second point:  regular contact => shared experiences => you can empathize with each other
 Another significant advantage of taking all classes together is that buddies would have shared experiences.
-There is immense power in talking to someone who understands exactly what you are facing because she has the same professor who makes insensitive comments (\eg ``I'm sure you all learned this in middle school" or ``It's silly to be interested in fashion") or because she is banging her head against the same impossible assignment.
+There is immense power in talking to someone who understands exactly what you are facing because she has the same insensitive professor or is banging her head against the same impossible assignment.
 Talking to someone in another class with a completely different style of instruction is less encouraging because they cannot fully empathize.
 
-%I would also recommend planning fun social events as well, including alumni of the program who can pass on that view from the future (\eg ``It gets better").
-%This helps to produce a bond between the women and also exposes them to encouragement from people with more experience and hopefully more confidence.
-
-% objections:
-% why not a cohort -- people can fall through the cracks
-% why not just a big sister -- can't relate b/c they've already moved on to bigger worries; seem less approachable.  also they're not getting as much out of it, so less inclined to give you a lot of time.
-
 When implementing the program, women should be paired up according to their technical experience (\eg years coding, math background) and extracurricular interests.
-%Personally, merely seeing other women in CS is not enough to make me believe I can succeed if they are very different from me (\eg more experienced at coding, more into the nerd subculture, less interested in things outside of CS).
 I believe that a woman will be most encouraged regarding her potential for success in CS if she sees someone like her doing well.
 This may be even more important in the case of women who have less coding experience or interests that are out of step with the nerd subculture that is usually associated with CS; these women are probably in greater danger of feeling out of place.
-%This addresses what I believe is the most fundamental confidence issue that women in CS face, which is asking yourself whether people like you can succeed in CS.
-%It can be so hard when you look around and don't see any role models that you can relate to.
-%However, it's been my experience that having someone you have a lot in common with that you respect gives you confidence that you can also succeed.
 I have been fortunate to have a friend in my lab with whom I interact on a daily basis, and we not only share non-CS interests but also struggle in some of the same ways.
 Our interactions are a powerful source of mutual encouragement.
 Rather than leaving it to chance, the Buddy \textit{Sis}tem would help women develop this sot of relationship.
 
 To measure the success of my program, I would compare women outside the program (control group) with buddies (treatment group) via qualitative and quantitative metrics.
 I would issue surveys to assess their mental health and self-confidence, and I would also look at their academic performance.
-%Ideally, I'd like to see that the women in the program score higher on these scales than women going at the degree program on their own.
-%If women opted to continue taking classes with their buddies after the first year, that would also be indicative of a successful program.
-%I would also look at their academic performance (\ie GPA).
-%The program would be a success if participants scored higher on the surveys and with respect to GPA.
-%I'd also like to see if these women translate their increased confidence into better academic performance -- my hypothesis is that they would.
 Most importantly, since this program is addressed at improving retention rates, I would compare the rates of attrition in the control and treatment groups.
 The program would be a success if the women in the program would be more likely to stay enrolled in the degree program than otherwise.
 
 Completing a CS degree program can be difficult for anyone, and being a woman can bring additional challenges.
 I have been very fortunate to have a friend who is like-minded and understands my struggles, and I believe universities could increase diversity and improve retention by helping women find buddies like mine.
-
 
 \end{document}
