edits to essays 1 & 3

--- a/essay3.tex
+++ b/essay3.tex
@@ -13,15 +13,15 @@
 \textbf{Anita Borg proposed the ``50/50 by 2020" initiative, so that women earning computing degrees would be 50\% of the graduates by year 2020. However, the percentage of computer science degrees earned by women is still far from 50\% throughout the world.  What might you propose that could be implemented by a school, the government, an organization, or a private company to reverse the trend? Short of getting to 50/50 by 2020, how would you measure the success of your program?}\\
 
 To address Anita Borg's initiative, I propose a program to increase retention of women in CS bachelor's degree programs.
-Women who have embarked on a degree program have already taken the important step of declaring an interest in CS, so if we want more female CS graduates, they are a great target for our efforts.  % low-hanging fruit argument
+Women who have embarked on a degree program have already taken the important step of declaring an interest in CS, so if we want more female CS graduates, they are a great target for our efforts.
 
 My program, called the Buddy \textit{Sis}tem, would be implemented at the university level and would be open to new female CS majors.
-Participants would agree to have a buddy with whom they would take all their classes (not just those focused on programming) for at least the first year.
-This may sound draconian, but based on my experiences at UC Berkeley, I believe its powerful advantages outweigh the hassles.
+Each participant would be assigned a buddy with whom she would take all her classes (not just those focused on programming) for at least the first year.
+This approach may sound draconian, but based on my experiences at UC Berkeley, I believe its powerful advantages outweigh the hassles.
 
 % First point:  need to enforce regular contact so they can build trust
 First, the Buddy \textit{Sis}tem provides the structure necessary for building trust.
-While an informal cadre of female friends can be immensely beneficial, the danger is that since most CS departments have few female students, they are unlikely to spend much time together without a conscious effort, especially since the first year of college can be so overwhelming.
+While an informal cadre of female friends can be immensely beneficial, the danger is that since most CS departments have few female students, they would be unlikely to spend much time together without a conscious effort, especially since the first year of college can be so overwhelming.
 The weak ties that often result do little to provide an opportunity for confiding one's struggles.
 This is problematic because, as evidenced by the popularity of ``The Impostor Syndrome" seminars, many women feel inadequate, particularly in male-dominated environments.
 Buddies would engage in regular contact so they would feel more comfortable sharing their feelings with each other.
@@ -33,15 +33,15 @@ Talking to someone in another class with a completely different style of instruc
 
 When implementing the program, women should be paired up according to their technical experience (\eg years coding, math background) and extracurricular interests.
 I believe that a woman will be most encouraged regarding her potential for success in CS if she sees someone like her doing well.
-This may be even more important in the case of women who have less coding experience or interests that are out of step with the nerd subculture that is usually associated with CS; these women are probably in greater danger of feeling out of place.
+This may be even more important for women with less coding experience or interests outside the nerd subculture usually associated with CS; they are probably in greater danger of feeling out of place.
 I have been fortunate to have a friend in my lab with whom I interact on a daily basis, and we not only share non-CS interests but also struggle in some of the same ways.
 Our interactions are a powerful source of mutual encouragement.
-Rather than leaving it to chance, the Buddy \textit{Sis}tem would help women develop this sot of relationship.
+Rather than leaving it to chance, the Buddy \textit{Sis}tem would help women develop this sort of relationship.
 
-To measure the success of my program, I would compare women outside the program (control group) with buddies (treatment group) via qualitative and quantitative metrics.
-I would issue surveys to assess their mental health and self-confidence, and I would also look at their academic performance.
-Most importantly, since this program is addressed at improving retention rates, I would compare the rates of attrition in the control and treatment groups.
-The program would be a success if the women in the program would be more likely to stay enrolled in the degree program than otherwise.
+To measure the success of my program, I would compare women with buddies with women outside the program via qualitative and quantitative metrics.
+I would issue surveys to assess their mental health and self confidence, and I would also look at their academic performance.
+Most importantly, since this program aims to improve retention rates, I would compare the rates of attrition in the two groups.
+The program would be a success if women with buddies were more likely to stay enrolled in the degree program.
 
 Completing a CS degree program can be difficult for anyone, and being a woman can bring additional challenges.
 I have been very fortunate to have a friend who is like-minded and understands my struggles, and I believe universities could increase diversity and improve retention by helping women find buddies like mine.
