edits to essay 2

--- a/essay2.tex
+++ b/essay2.tex
@@ -17,48 +17,34 @@ During my time at UC Berkeley, I have been involved with several leadership acti
 In each, I have applied my organizational skills to mentor and encourage graduate and undergraduate students in the department, especially women.
 
 % twice as long as it should be!  Want 150-200 words per activity plus some intro & conclusion
-For the past year and a half, I have been mentoring an undergraduate research assistant named Durga.
-%Through this experience, my goals included providing research opportunities for undergraduates, developing my managerial skills, and gaining help with my own research.
-I was motivated by my own experience doing undergraduate research.
-I really admired my graduate mentor and the way she taught me about new concepts, encouraged me to grow professionally, and believed that I would succeed; therefore, I sought to emulate her.
-%Since I know that a research opportunity can be really valuable, not only for what you learn during the experience but also for the doors it can open afterwards, I was motivated to give this opportunity to others as well.
-For my research, I use a variety of tools that Durga had not encountered, so I taught her about version control (github), dependency management (maven/sbt), data analysis (R), languages (Scala), and web programming (JavaScript, jQuery, HTML, REST).
-In the context of a crowdsourcing project, I worked with her to develop better habits.
-We decided to submit an extended abstract and poster to CSCW 2012, and along the way, I talked with her about the value of getting feedback on her writing, making sure the story is coming across to people unfamiliar with the work, and identifying and emphasizing the most important contributions of the work.
+For the past year and a half, I have been supervising an undergraduate research assistant named Durga.
+When I did undergraduate research, I really admired how my graduate mentor taught me about new concepts, encouraged me to grow professionally, and believed that I would succeed.
+I seek to emulate her approach as I mentor undergraduates.
+First, I taught Durga about a variety of tools that I use for my research, from version control and dependency management to new programming languages and frameworks.
+I also helped her learn about how to present her work.
+We submitted an extended abstract and poster to CSCW 2012, and I took the opportunity to emphasize the value of identifying the most important contributions of the work and getting feedback on her writing to ensure that the story is clear.
 Her submission was accepted, and she will present the work at CSCW this year.
-It was most rewarding when Durga shared that she believes that she can succeed in graduate school because of this experience.
+It was most rewarding when Durga shared that because of this experience, she is confident that she can succeed in graduate school.
 Mentoring has benefitted me as well; I have grown as a manager, and I have been able to do more research than I would have on my own.
-%Employing techniques like having regular goal-setting and progress update meetings as well as learning when to let the students figure things out on their own vs. when to step in and help has allowed me to grow as a manager.
-Also, when another undergraduate student, Lauren, recently asked my advisor for a research opportunity, he sent her to me.
+%Also, when another undergraduate student, Lauren, recently asked my advisor for a research opportunity, he sent her to me.
 
-I got another leadership opportunity when I served as a teaching assistant (TA) to one of my advisors, Armando Fox, for a software engineering course focused on building Ruby on Rails web applications.
-Along with the other graduate TA, and with input from our advisor, I managed the undergraduate TAs, held discussion section and review sessions, supervised project teams, and designed and graded assignments and exams.
-%Rather than waiting for my advisor to suggest topics for the weekly discussion section, I designed the section to go over topics that the students were struggling with, which I kept track of when the students came to ask for help in my office hours or on the online forum.
-The course focused on completing a group project.
-I supervised half of the project teams, which involved giving them feedback on their progress, helping them plan new features, and pointing out when a change of course was necessary (\eg schema redesign to better align with design principles).
-I also helped them work out interpersonal conflicts arising from unequal participation.
-I sought to help my advisor run an organized class so that the students would learn both technical skills and how to deal with their teammates and future collaborators.
+My management skills also helped when I served as a teaching assistant (TA) to one of my advisors, Armando Fox, for a software engineering course.
+Along with the other graduate TA, and with input from our advisor, I managed the undergraduate TAs, held discussion section and review sessions, and designed and graded assignments and exams.
+The course focused on building a Ruby on Rails web application as a group, and I supervised half of the teams.
+This involved assessing their progress, suggesting new features, and helping them work out interpersonal conflicts.
+I helped my advisor run an organized class so the students would not only gain technical skills but also learn how to deal with their future collaborators.
 It was great to see one of the students I supervised get hired at PivotalLabs, putting into practice what she had learned in our class.
-I also got good feedback on my evaluations; many students said that I was helpful and approachable, and one said ``she rocks!"
-% could mention that I went out of my way to mentor/encourage the female students (office hours, hallway conversations, following up with students who weren't doing well, giving advice about what to do afterwards)
+I also received encouraging feedback on my evaluations; many students said that I was helpful and approachable, and one said ``she rocks!"
 
-My involvement with UC Berkeley's group for female EECS graduate students, Women in Computer Science and Engineering (WICSE), has been another great leadership activity.
-The primary activity that WICSE organizes is a weekly lunch.
-WICSE and especially these lunches mean a lot to me because it is so encouraging to interact with other women in the department.
-%I therefore decided to serve as an officer in WICSE because of how much I appreciate being involved with the organization.
-I therefore volunteered to be lunch coordinator, and I held this position for two years.
-Before I served in this office, the lunch was fairly disorganized.
-For example, people ordering lunch were often confused about what to bring and how to get reimbursed, and the location would often be changed at the last minute.
-%For example, when you volunteered to order lunch one week, you didn't really know what you were supposed to bring (\eg how much food to buy, whether to also bring plates, cups, and flatware), how to get reimbursed, or even have a way to keep track of when you had volunteered since there was only a paper sign-up.
-%Sometimes, it wasn't even clear where the lunch would take place, since room reservations could be changed or canceled by the department staff and this wouldn't always get communicated to the group.
-As lunch coordinator, my goal was to take care of the details so that everyone could better enjoy themselves.
-I centralized the supply management (plates, cups, etc.), arranged room reservations, and recruited volunteers.
-%I sent reminders with a FAQ section to each week's scheduled volunteer and also sent an email on the day of the lunch to the attendees with the location and special event (if any).
-I also managed the special event schedule since we often had guest speakers from the department or from industry.
-My successor continued implementing things according to the pattern I had established.
-WICSE also provides opportunities to mentor younger graduate students and undergraduates.
+My involvement with our department's group for female graduate students, Women in Computer Science and Engineering (WICSE), has been another great leadership activity.
+WICSE provides opportunities to mentor younger graduate students and undergraduates.
 As part of our Big Sisters/Little Sisters program, I meet up with female first-year graduate students and help them get oriented to life in Berkeley.
-I also participate in is the monthly mentoring lunch, which involves helping undergraduates figure out what classes to take as well as how to get involved with research if they're interested in graduate school.
+I also participate in the monthly mentoring lunch, which involves helping undergraduates choose classes and get involved with research.
+In addition, WICSE provides a weekly lunch for female graduate students.
+In the past, the lunch was fairly disorganized; people ordering lunch were often confused about what to bring and how to get reimbursed, and the location would often be changed at the last minute.
+I therefore volunteered to be lunch coordinator, and I held this position for two years.
+My goal was to maintain the camaraderie by taking care of the details, so I centralized the supplies, arranged room reservations, recruited volunteers, and scheduled speakers.
+My successor continued implementing things according to the pattern I had established.
 
 My leadership activities have been an important element of my time at UC Berkeley.
 I feel that I have been able to apply my skills to help others while learning a lot myself.
